...
  @override
  Widget build(BuildContext context) {
    return InkWell(
      onTap: (){
        showGeneralDialog(
          context: context,
          pageBuilder: (context, _, __) => RecipeScreen(key:ValueKey("TappedRecipe"), recipe: recipe),
          barrierDismissible: true,
          barrierLabel: "ModalBarrier",
        );
      },
      child: Container(
        clipBehavior: Clip.hardEdge,
...
